Added more leadership verbage and a printed page break.

--- a/css/main.css
+++ b/css/main.css
@@ -23,6 +23,11 @@ body {
 .mbn { margin-bottom: 0;}
 .mtn { margin-top: 0;}
 
+@media print {
+    .print-new-page {
+        page-break-before: always;
+    }
+}
 
 /* Resume layout */
 @media (min-width: 600px), print {
